k8/4_task/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
  namespace: k8-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1-container
          image: galdovich95/spring-boot-app:2.0.0
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
              httpGet:
                path: /actuator/health/readiness
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
          startupProbe:
              httpGet:
                path: /actuator/health/startup
                port: 8080
              initialDelaySeconds: 20
              failureThreshold: 5
