k8/4_task/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: k8-app
spec:
  type: ClusterIP
  selector:
    app: service1
  ports:
    - port: 80
      targetPort: 8080
